--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - master
 
       #- deploy:
       #    requires:
