--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,57 @@
-branch-defaults:
-  master:
-    environment: Corso Docker CircleCI-$CIRCLECI_BRANCH
-  develop:
-    environment:  Corso Docker CircleCI-$CIRCLECI_BRANCH
-global:
-  application_name:  Corso Docker CircleCI
-  default_platform: 64bit Amazon Linux 2023/4.0.0
-  default_region: us-east-1
-  sc: git
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
+version: 2.1
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/configuration-reference/#jobs
+jobs:
+  build:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/configuration-reference/#executor-job
+    docker:
+      - image: docker:19.03.12
+    # Add steps to the job
+    # See: https://circleci.com/docs/configuration-reference/#steps
+    steps:
+      - checkout
+
+      - setup_remote_docker:
+          docker_layer_caching: true
+      
+      - run:
+          name: "Build the image"
+          command: "docker build -t ebaymail93/corsodocker:circleci-react -f Dockerfile.dev ."
+
+      - run:
+          name: "Run tests"
+          command: "docker run -e CI=true ebaymail93/corsodocker:circleci-react npm run test"  
+  deploy:
+    docker:
+        - image: cimg/python:3.10
+      steps:
+        - checkout
+        - run: pip3 --version
+        - run:
+            working_directory: /
+            name: installing ebcli
+            command: pip3 install awsebcli --upgrade --user
+        - run: eb --version
+        - run:
+            name: deploying with awsebcli
+            command: eb deploy  Corso Docker CircleCI-$CIRCLE_BRANCH
+workflows:
+  build-and-deploy:
+    jobs:
+      - build
+      - eb/deploy:
+          context: aws-credentials
+          filters:
+            branches:
+              only:
+                - master
+          requires:
+            - build
+
+      #- deploy:
+      #    requires:
+      #      - build
