--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: 20.6.0-browsers
+      - image: cimg/node:20.6.0-browsers
     steps:
       - checkout
       - setup_remote_docker:
