--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,19 @@ jobs:
       - checkout
       - run:
           name: Build Docker Image
-          command: docker build -t ebaymail93/corsodocker -f Dockerfile .
+          command: docker build -t ebaymail93/corsodocker -f Dockerfile.dev .
   deploy:
-    executor: aws-elasticbeanstalk/default
+    docker:
+      - image: circleci/python:3.7
     steps:
-      - aws-elasticbeanstalk/deploy:
-          application: Corso Docker CircleCI
-          environment: CorsoDockerCircleCI-env
-          image_path: ebaymail93/corsodocker:circleci-react
+      - checkout
+      - run:
+          name: Deploy to Elastic Beanstalk
+          command: |
+            pip install awsebcli
+            aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+            aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+            eb deploy your-environment-name
 
 workflows:
   version: 2
