--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,7 @@ jobs:
       - image: circleci/python:3.7
     steps:
     - checkout
-    - run:
-        name: Configure AWS CLI
-        command: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY
-          aws configure set aws_secret_access_key $AWS_SECRET_KEY
-          aws configure set region $AWS_DEFAULT_REGION
+    - eb/setup
     - run:
         name: Deploy to Elastic Beanstalk
         command: |
