--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,7 @@ jobs:
     - eb/setup
     - run:
         name: Deploy to Elastic Beanstalk
-        command: |
-          eb deploy CorsoDockerCircleCI-env
+        command: eb deploy CorsoDockerCircleCI-env
 
 workflows:
   version: 2
